# MicroTube

./: README.md
Backend/Server/: CMakeLists.txt
Backend/Server/src/: App.cpp  AppComponent.hpp
Backend/Server/src/controller/: ChannelController.hpp  StaticController.cpp  StaticController.hpp  UserController.hpp  VideoController.cpp  VideoController.hpp
Backend/Server/src/dto/: InfoJsonDTO.hpp  StatusDTO.hpp  TokenDTOs.hpp  UserDTO.hpp  UserRegistrationDTO.hpp  VideoInfoDTO.hpp  VideoInfoTransferDTO.hpp  VideoListDTO.hpp
Backend/Server/src/general/: constants.hpp
Backend/Server/src/sql/: 001_init.sql  DatabaseClient.hpp  DatabaseComponent.hpp  database.sqlite
Backend/Server/src/swagger-ui/: SwaggerComponent.hpp
Backend/Server/src/videos/: VideoIndexer.cpp  VideoIndexer.hpp
docs/: AppComponent_8hpp.html  AppComponent_8hpp.js  AppComponent_8hpp__dep__incl.map  AppComponent_8hpp__dep__incl.md5  AppComponent_8hpp__incl.map  AppComponent_8hpp__incl.md5  AppComponent_8hpp_source.html  App_8cpp.html  App_8cpp.js  App_8cpp__incl.map  App_8cpp__incl.md5  App_8cpp_a13a43e6d814de94978c515cb084873b1_cgraph.map  App_8cpp_a13a43e6d814de94978c515cb084873b1_cgraph.md5  App_8cpp_a13a43e6d814de94978c515cb084873b1_icgraph.map  App_8cpp_a13a43e6d814de94978c515cb084873b1_icgraph.md5  App_8cpp_ae93cff9b2c9997ef23c0210364971d13_cgraph.map  App_8cpp_ae93cff9b2c9997ef23c0210364971d13_cgraph.md5  App_8cpp_source.html  ChannelController_8cpp.html  ChannelController_8cpp_source.html  ChannelController_8hpp.html  ChannelController_8hpp.js  ChannelController_8hpp__dep__incl.map  ChannelController_8hpp__dep__incl.md5  ChannelController_8hpp__incl.map  ChannelController_8hpp__incl.md5  ChannelController_8hpp_source.html  DatabaseClient_8hpp.html  DatabaseClient_8hpp.js  DatabaseClient_8hpp__dep__incl.map  DatabaseClient_8hpp__dep__incl.md5  DatabaseClient_8hpp__incl.map  DatabaseClient_8hpp__incl.md5  DatabaseClient_8hpp_source.html  DatabaseComponent_8hpp.html  DatabaseComponent_8hpp.js  DatabaseComponent_8hpp__dep__incl.map  DatabaseComponent_8hpp__dep__incl.md5  DatabaseComponent_8hpp__incl.map  DatabaseComponent_8hpp__incl.md5  (+343 more)
docs/doxygen/: _app_8cpp_source.html  _app_component_8hpp_source.html  _channel_controller_8cpp_source.html  _channel_controller_8hpp_source.html  _info_json_d_t_o_8hpp_source.html  _static_controller_8hpp_source.html  _swagger_component_8hpp_source.html  _token_d_t_os_8hpp_source.html  _video_indexer_8hpp_source.html  annotated_dup.js  classmicro_tube_1_1apicontroller_1_1_channel_controller-members.html  classmicro_tube_1_1apicontroller_1_1_channel_controller.html  classmicro_tube_1_1apicontroller_1_1_static_controller.html  classmicro_tube_1_1apicontroller_1_1_user_controller-members.html  classmicro_tube_1_1apicontroller_1_1_user_controller.html  classmicro_tube_1_1apicontroller_1_1_video_controller.html  classmicro_tube_1_1component_1_1_app_component-members.html  classmicro_tube_1_1component_1_1_app_component.html  classmicro_tube_1_1component_1_1_swagger_component.html  classmicro_tube_1_1dto_1_1_user_database_entry.html  classmicro_tube_1_1dto_1_1_user_info_d_t_o.html  classmicro_tube_1_1dto_1_1_user_login_d_t_o-members.html  classmicro_tube_1_1dto_1_1_user_registration_d_t_o.html  classmicro_tube_1_1dto_1_1_video_info_transfer_d_t_o-members.html  classmicro_tube_1_1dto_1_1_video_list_dto.html  classmicro_tube_1_1video_1_1_video_indexer-members.html  classmicro_tube_1_1video_1_1_video_indexer.html  classmicrotube_1_1component_1_1_database_component-members.html  dir_00c2954669865246c768fb384f02d774.js  dir_03b2c4579e67a26aa3c83dfbdcd0ec7a.html  dir_13c92a04a1fbd37d3d9930667c9dcb0a.html  dir_66576c84587874f87443da5f76ffcbc9.html  dir_66576c84587874f87443da5f76ffcbc9.js  dir_924b1fcfd640fef58c115dbe3022bb4f.js  dir_99db34afe89933924e28eb176d005aa8.html  dir_99db34afe89933924e28eb176d005aa8.js  dir_e752f4e0724aaab8a5386cf4c2abc86a.html  dir_e752f4e0724aaab8a5386cf4c2abc86a.js  doxygen_crawl.html  files.html  (+3 more)
docs/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  (+19 more)
(+56 files in other folders)
